♻️  Change the ordering in which charts are generated in the notebooks
To match the original order
https://github.com/e-mission/em-public-dashboard/blob/134cd25722f1e1ebaa566e8ffb45f3d8d497e1fd/viz_scripts/generic_metrics.ipynb#L2
to hopefully make the review smoother

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -153,7 +153,7 @@
    "id": "e50959c1",
    "metadata": {},
    "source": [
-    "### 1. Represents Number of Trips"
+    "### Distribution of modes"
    ]
   },
   {
@@ -183,10 +183,88 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fa4f3da",
+   "metadata": {},
+   "source": [
+    "### Distribution of modes in commute trips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6cd4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
+    "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
+    "\n",
+    "try:\n",
+    "    # Preprocess to find commute trips\n",
+    "    if (len(dynamic_labels)):\n",
+    "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
+    "        translation_work = purpose_map_label['work']\n",
+    "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
+    "    else:\n",
+    "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
+    "\n",
+    "    expanded_ct_commute = expanded_ct.query(trip_purpose_query)\n",
+    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct_commute, \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
+    "    plot_title = plot_title_no_quality\n",
+    "    plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
+    "    \n",
+    "    # Plot entries\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)    \n",
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_sensed)\n",
+    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, pd.errors.UndefinedVariableError) as e:\n",
+    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
+    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "except Exception as e:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffb2df0b",
+   "metadata": {},
+   "source": [
+    "### Distribution of Trip_purpose attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46474ada",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
+    "file_name = f\"ntrips_purpose{file_suffix}\"\n",
+    "try:\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose')\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + quality_text\n",
+    "    create_alt_text_and_html_title(plot_title, file_name)\n",
+    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_purpose)\n",
+    "    store_alt_text_and_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
+    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fc63a45",
    "metadata": {},
    "source": [
-    "### 2. Represents 80th percentile of the Number of Trips"
+    "### Mode choice for trips under 80% mark"
    ]
   },
   {
@@ -233,58 +311,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa4f3da",
-   "metadata": {},
-   "source": [
-    "### 3. Represents Commute Trips"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c6cd4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
-    "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
-    "\n",
-    "try:\n",
-    "    # Preprocess to find commute trips\n",
-    "    if (len(dynamic_labels)):\n",
-    "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
-    "        translation_work = purpose_map_label['work']\n",
-    "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
-    "    else:\n",
-    "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "\n",
-    "    expanded_ct_commute = expanded_ct.query(trip_purpose_query)\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct_commute, \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
-    "    plot_title = plot_title_no_quality\n",
-    "    plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
-    "    \n",
-    "    # Plot entries\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)    \n",
-    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_sensed)\n",
-    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
-    "except (AttributeError, pd.errors.UndefinedVariableError) as e:\n",
-    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
-    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
-    "except Exception as e:\n",
-    "    fig, ax = plt.subplots()\n",
-    "    plot_and_text_error(e, ax, file_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b560cb32",
    "metadata": {},
    "source": [
-    "### 4. Represents Total Trip Length covered by each mode"
+    "### Total Trip Length covered by each mode"
    ]
   },
   {
@@ -319,7 +349,7 @@
    "id": "bc9be240",
    "metadata": {},
    "source": [
-    "### 5. Represents Total Trip Length covered by each mode in Land"
+    "### Total Trip Length covered by each land transport mode"
    ]
   },
   {
@@ -343,36 +373,6 @@
     "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], colors_sensed)\n",
     "    store_alt_text_and_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffb2df0b",
-   "metadata": {},
-   "source": [
-    "### 6. Represents number of trips for each purpose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46474ada",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
-    "file_name = f\"ntrips_purpose{file_suffix}\"\n",
-    "try:\n",
-    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose')\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + quality_text\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_purpose)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
     "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
@@ -631,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
