♻️  Revert extraneous changes
So that the actual changes are more clearly visible

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -163,8 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "file_name = f'ntrips_total{file_suffix}'\n",
+    "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
@@ -210,8 +210,7 @@
     "\n",
     "    expanded_ct_commute = expanded_ct.query(trip_purpose_query)\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct_commute, \"commute\", include_test_users) if not expanded_ct.empty else \"\"\n",
-    "    plot_title = plot_title_no_quality\n",
-    "    plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + commute_quality_text\n",
     "    \n",
     "    # Plot entries\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)    \n",
@@ -244,8 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
-    "file_name = f\"ntrips_purpose{file_suffix}\"\n",
+    "plot_title_no_quality=\"Number of trips for each purpose (selected by users)\"\n",
+    "file_name= f\"ntrips_purpose{file_suffix}\"\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose')\n",
@@ -255,8 +254,8 @@
     "    store_alt_text_and_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
     "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
@@ -324,15 +323,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
-    "file_name = f\"total_trip_length{file_suffix}\"\n",
+    "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
+    "plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "file_name =f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    \n",
     "    df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower)\n",
     "    df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower)  \n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_text_and_html_title(plot_title, file_name)\n",
     "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", \"Labeled by user\\n (Trip distance)\", ax[0], colors_mode)\n",
     "    store_alt_text_and_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
@@ -359,14 +358,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode by land\"\n",
-    "file_name = f\"total_trip_length_land{file_suffix}\"\n",
+    "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode by land\"\n",
+    "plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "file_name =f\"total_trip_length_land{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"] if 'Mode_confirm' in expanded_ct.columns else pd.DataFrame(), 'Mode_confirm', distance_col, label_units_lower)\n",
     "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"] if 'primary_mode' in expanded_ct_sensed.columns else pd.DataFrame(), 'primary_mode', distance_col, label_units_lower)\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    create_alt_text_and_html_title(plot_title, file_name)\n",
     "    plot_stacked_bar_chart(df_confirm_dist_land, \"Labeled by user\\n (Trip distance - Land)\", \"Confirmed Trip\", ax[0], colors_mode)\n",
     "    store_alt_text_and_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
@@ -401,8 +400,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "plot_title_no_quality=\"Average \"+ label_units+\" for each mode with > 3 entries\"\n",
+    "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    dist = expanded_ct.groupby('Mode_confirm').agg({distance_col: ['sum', 'count' , 'mean']})\n",
@@ -413,7 +412,7 @@
     "    x='Mode_confirm'\n",
     "    y='Average ('+label_units_lower+')'\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "\n",
+    "    \n",
     "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "\n",
     "    barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
@@ -445,7 +444,7 @@
     "    fq_days = expanded_ct.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
     "    fq_days = fq_days.reset_index()\n",
     "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
-    "\n",
+    "    \n",
     "    data = fq_days\n",
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
@@ -482,7 +481,7 @@
     "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
     "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
     "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "\n",
+    "    \n",
     "    data = fq_weekdays\n",
     "    x = 'Weekday'\n",
     "    y = 'Number of Trips'\n",
