♻️  Hopefully last round of refactoring

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -323,8 +323,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
-    "plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "plot_title_no_quality= label_units + \" for each mode\"\n",
+    "plot_title=plot_title_no_quality + '\\n' + quality_text\n",
     "file_name =f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
@@ -373,8 +373,8 @@
     "    store_alt_text_and_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
     "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
    ]
   },
   {
@@ -444,11 +444,11 @@
     "    fq_days = expanded_ct.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
     "    fq_days = fq_days.reset_index()\n",
     "    fq_days.columns = ['Day of the Month', 'Total', 'Number of Trips']\n",
-    "    \n",
+    "\n",
     "    data = fq_days\n",
     "    x = 'Day of the Month'\n",
     "    y = 'Number of Trips'\n",
-    "\n",
+    "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
@@ -481,11 +481,11 @@
     "    fq_weekdays.columns = ['Weekday', 'Total', 'Number of Trips']\n",
     "    weekday_labels = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
     "    fq_weekdays[\"Weekday\"] = fq_weekdays.Weekday.apply(lambda x: weekday_labels[x])\n",
-    "    \n",
+    "\n",
     "    data = fq_weekdays\n",
     "    x = 'Weekday'\n",
     "    y = 'Number of Trips'\n",
-    "\n",
+    "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    barplot_day(data,x,y,plot_title,file_name)\n",
