♻️  Change the trip purpose to also use the new methods
There is only one bar here, so we have only one axis and only one array of text
results. Also, we only need to deal with code errors again because there is no
preprocessing

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -247,13 +247,11 @@
     "file_name= f\"ntrips_purpose{file_suffix}\"\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_purpose_trip_expanded, df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose')\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled: \" + quality_text\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip, \"Confirmed Trip\", \"Labeled by user\\n (Confirmed trips)\", ax, colors_purpose)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_purpose_trip_expanded, file_name, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
-    "except:\n",
+    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Trip_purpose\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
    ]
