--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -171,14 +171,14 @@
     "    # We will have text results corresponding to the axes for simplicity and consistency\n",
     "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
     "    plot_and_text_stacked_bar_chart(expanded_ct, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_sensed)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except Exception as e:\n",
     "    # TODO: Future cleanup can pass in just the figure and have the function choose the last axis\n",
     "    fig, ax = plt.subplots()\n",
-    "    plot_and_text_error(e, ax[1], file_name)"
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
