🐛 Other minor bug fixes to get the plots that we expect to work to work
Primary fixes:
- the colormap that is passed in
- handling commute properly (it only has one bar so we need only one instance
  of many things)
- handling errors correctly (there is only one axis now that we create a new
  figure)

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -214,15 +214,9 @@
     "    \n",
     "    # Plot entries\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)    \n",
-    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_sensed)\n",
+    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_commute, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
-    "except (AttributeError, pd.errors.UndefinedVariableError) as e:\n",
-    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
-    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -248,7 +242,7 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Trip_purpose\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Trip_purpose\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_purpose, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except Exception as e:\n",
@@ -286,7 +280,7 @@
     "    plot_title_no_quality=plot_title_no_quality+\"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
     "\n",
     "    expanded_ct_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)]\n",
-    "    expanded_ct_sensed_u80 = expanded_ct_sensed.loc[(expanded_ct['distance'] <= cutoff)]\n",
+    "    expanded_ct_sensed_u80 = expanded_ct_sensed.loc[(expanded_ct_sensed['distance'] <= cutoff)]\n",
     "    u80_quality_text = scaffolding.get_quality_text(expanded_ct_sensed, expanded_ct_sensed_u80, \"< \" + dist_threshold + \" \" + label_units_lower, include_test_users)\n",
     "    plot_title = plot_title_no_quality+\"\\n\"+u80_quality_text\n",
     "    \n",
@@ -294,7 +288,7 @@
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
     "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_mode, debug_df_sensed)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except AttributeError as e:\n",
     "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
@@ -303,7 +297,7 @@
     "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Number of trips below 80th percentile in each mode\")\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
-    "    plot_and_text_error(e, ax[1], file_name)"
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
